MyWeatherForecast/kube/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecast-deployment
  labels: 
    name: forecast-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: forecast-app
  template:
    metadata:
      labels:
        name: forecast-app
    spec:
      containers:
      - name: myweather-container
        image: mururegistry.azurecr.io/muru-forecast:v1
        #imagePullPolicy: Never #Never will use the local image in the machine
        # ports:
        #     - containerPort: 80
        #       name: http
