MyWeatherForecast/kube/service-def.yaml
apiVersion: v1
kind: Service
metadata:
  name: forecast-service
spec:
  type: ClusterIP #clusterip #load balancer
  ports:
    - targetPort: 1947
      port: 1947     
  selector:
    name: forecast-app
